fixed veird spacing, hopefully fonts

--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,6 @@
 /* ========================
    Fonts
 ======================== */
-@font-face {
-    font-family: 'Minecraft7';
-    src: url("https://no1online.cz/assets/font/Minecraft7.woff2") format('woff2'),
-         url("https://no1online.cz/assets/font/Minecraft7.woff") format('woff'),
-         url("https://no1online.cz/assets/font/Minecraft7.ttf") format('truetype');
-}
-
 /* ========================
    General Styles
 ======================== */
